--- a/eng/Sharpliner.CI/Sharpliner.CI.csproj
+++ b/eng/Sharpliner.CI/Sharpliner.CI.csproj
@@ -23,13 +23,13 @@
   -->
 
   <Target Name="CleanDependencies" AfterTargets="Clean">
-    <Exec Condition=" '$(OS)' != 'Windows_NT' " Command="$(MSBuildThisFileDirectory)../scripts/clean-dependencies.sh" />
-    <Exec Condition=" '$(OS)' == 'Windows_NT' " Command="powershell.exe -NonInteractive -ExecutionPolicy Unrestricted $(MSBuildThisFileDirectory)..\scripts\clean-dependencies.ps1" />
+    <Exec Condition=" '$(OS)' != 'Windows_NT' " Command='"$(ProjectDir)../scripts/clean-dependencies.sh" ' />
+    <Exec Condition=" '$(OS)' == 'Windows_NT' " Command='"powershell.exe -NonInteractive -ExecutionPolicy Unrestricted "$(ProjectDir)..\scripts\clean-dependencies.ps1" ' />
   </Target>
 
   <Target Name="BuildDependencies" BeforeTargets="_GenerateRestoreProjectSpec">
-    <Exec Condition=" '$(OS)' != 'Windows_NT' " Command="$(MSBuildThisFileDirectory)../scripts/build-dependencies.sh" />
-    <Exec Condition=" '$(OS)' == 'Windows_NT' " Command="powershell.exe -NonInteractive -ExecutionPolicy Unrestricted $(MSBuildThisFileDirectory)..\scripts\build-dependencies.ps1" />
+    <Exec Condition=" '$(OS)' != 'Windows_NT' " Command='"$(ProjectDir)../scripts/build-dependencies.sh" '/>
+    <Exec Condition=" '$(OS)' == 'Windows_NT' " Command='"powershell.exe -NonInteractive -ExecutionPolicy Unrestricted "$(ProjectDir)..\scripts\build-dependencies.ps1" ' />
   </Target>
 
 </Project>
