--- a/src/Sharpliner/Sharpliner.csproj
+++ b/src/Sharpliner/Sharpliner.csproj
@@ -46,6 +46,13 @@
     <Content Include="build\Sharpliner.targets" PackagePath="build\" />
   </ItemGroup>
 
+  <!-- This guarantees that the folder for the dependencies is created before the restore -->
+
+    <Target Name="PreRestoreTarget" BeforeTargets="Restore">
+      <Exec Condition=" '$(OS)' == 'Windows_NT' " Command='powershell -ExecutionPolicy Bypass -File "$(ProjectDir)..\..\eng\scripts\build-dependencies.ps1" false'  />
+      <Exec Condition=" '$(OS)' != 'Windows_NT' " Command='bash "$(ProjectDir)scripts/createDirectory.sh" ' />
+    </Target>
+
   <!--
     This Target makes sure we include YamlDotNet.dll in the NuGet as it will be needed by the task
     https://natemcmaster.com/blog/2017/11/11/msbuild-task-with-dependencies/#third-party-dependencies-and-nuget
