--- a/tests/E2E.Tests/ProjectUsingTheLibrary/E2E.Tests.ProjectUsingTheLibrary.csproj
+++ b/tests/E2E.Tests/ProjectUsingTheLibrary/E2E.Tests.ProjectUsingTheLibrary.csproj
@@ -24,13 +24,13 @@
   -->
 
   <Target Name="CleanDependencies" AfterTargets="Clean">
-    <Exec Condition=" '$(OS)' != 'Windows_NT' " Command="$(MSBuildThisFileDirectory)/../../../eng/scripts/clean-dependencies.sh" />
-    <Exec Condition=" '$(OS)' == 'Windows_NT' " Command="powershell.exe -NonInteractive -ExecutionPolicy Unrestricted $(MSBuildThisFileDirectory)\..\..\..\eng\scripts\clean-dependencies.ps1" />
+    <Exec Condition=" '$(OS)' != 'Windows_NT' " Command='"$(ProjectDir)/../../../eng/scripts/clean-dependencies.sh" '/>
+    <Exec Condition=" '$(OS)' == 'Windows_NT' " Command='"powershell.exe -NonInteractive -ExecutionPolicy Unrestricted "$(ProjectDir)\..\..\..\eng\scripts\clean-dependencies.ps1" ' />
   </Target>
 
   <Target Name="BuildDependencies" BeforeTargets="_GenerateRestoreProjectSpec">
-    <Exec Condition=" '$(OS)' != 'Windows_NT' " Command="$(MSBuildThisFileDirectory)/../../../eng/scripts/build-dependencies.sh" />
-    <Exec Condition=" '$(OS)' == 'Windows_NT' " Command="powershell.exe -NonInteractive -ExecutionPolicy Unrestricted $(MSBuildThisFileDirectory)\..\..\..\eng\scripts\build-dependencies.ps1" />
+    <Exec Condition=" '$(OS)' != 'Windows_NT' " Command='"$(ProjectDir)/../../../eng/scripts/build-dependencies.sh" '/>
+    <Exec Condition=" '$(OS)' == 'Windows_NT' " Command='"powershell.exe -NonInteractive -ExecutionPolicy Unrestricted  "$(ProjectDir)\..\..\..\eng\scripts\build-dependencies.ps1" ' />
   </Target>
 
 </Project>
