--- a/eng/pipelines/publish.yml
+++ b/eng/pipelines/publish.yml
@@ -27,6 +27,10 @@ jobs:
     parameters:
       version: 8.0.204
 
+  - powershell: |-
+      New-Item -Path 'artifacts' -Name 'packages' -ItemType 'directory'
+    displayName: Create artifacts/packages
+
   - task: DotNetCoreCLI@2
     displayName: Build
     inputs:
