--- a/src/Sharpliner/Sharpliner - Backup.csproj
+++ b/src/Sharpliner/Sharpliner - Backup.csproj
@@ -16,7 +16,7 @@
     <Authors>PremekVysoky</Authors>
     <NeutralLanguage>en</NeutralLanguage>
     <Version>43.43.43</Version>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
     <!-- Copy dependencies (YamlDotNet.dll) to bin/ so that we can include it in the NuGet later -->
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 
@@ -27,7 +27,7 @@
     <GenerateNuspecDependsOn>$(GenerateNuspecDependsOn);IncludeDependenciesInNupkg</GenerateNuspecDependsOn>
   </PropertyGroup>
 
-  <PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DocumentationFile>$(BaseOutputPath)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
@@ -49,17 +49,14 @@
 
   <!-- This guarantees that the folder for the dependencies is created before the restore -->
   
-    <Target Name="PreRestoreTarget" BeforeTargets="CollectPackageReferences">
-    <Exec Condition=" '$(OS)' == 'Windows_NT' " Command=' if not exist   "$(ProjectDir)..\..\artifacts\packages"  mkdir "$(ProjectDir)..\..\artifacts\packages"'  />
-    <Exec Condition=" '$(OS)' != 'Windows_NT' " Command='mkdir -p "${ProjectDir}../../artifacts/packages" ' />
-  </Target>
+    <!--<Target Name="PreRestoreTarget" BeforeTargets="CollectPackageReferences">
+    <Exec Condition=" '$(OS)' == 'Windows_NT' " Command='powershell -ExecutionPolicy Bypass -File "$(ProjectDir)..\..\eng\scripts\build-dependencies.ps1" false'  />
+    <Exec Condition=" '$(OS)' != 'Windows_NT' " Command='bash "$(ProjectDir)scripts/createDirectory.sh" ' />
+  </Target>-->
 
-  <Target Name="CleanPackage" AfterTargets="AfterClean">
-    <Exec Condition=" '$(OS)' == 'Windows_NT' " Command='if exist  "$(ProjectDir)../../artifacts/packages/Release" rd /s /q   "$(ProjectDir)../../artifacts/packages/Release"  ' />
-    <Exec Condition=" '$(OS)' != 'Windows_NT' " Command='"$(ProjectDir)../scripts/clean-dependencies.sh" ' />
-  </Target>
-
-
+<!--  <Target Name="PackAfterBuild" AfterTargets="Build">
+    <Exec Command="dotnet pack " />
+  </Target> -->
   <!--
     This Target makes sure we include YamlDotNet.dll in the NuGet as it will be needed by the task
     https://natemcmaster.com/blog/2017/11/11/msbuild-task-with-dependencies/#third-party-dependencies-and-nuget
@@ -108,6 +105,9 @@
         <BuildAction>Content</BuildAction>
       </_PackageFiles>
     </ItemGroup>
+  </Target>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="dotnet pack -c Release --nologo  --no-restore --no-build" />
   </Target>
 
 </Project>
